Bug 152752 - dolphin part does not correctly load it's message translations
Summary: dolphin part does not correctly load it's message translations
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-23 00:23 UTC by Albert Astals Cid
Modified: 2007-11-23 23:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2007-11-23 00:23:43 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

Dolphin shows messages translated but dolphinpart embedded into konqueror does not.
Comment 1 Albert Astals Cid 2007-11-23 23:54:21 UTC
SVN commit 740701 by aacid:

Ahhh, fixing the bugs you report, that rocks ;-)

Insert the dolphin catalog so the messages appear translated correctly when eg, embedded into konqueror

BUG: 152752


 M  +3 -0      dolphinpart.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=740701