Ahhh, fixing the bugs you report, that rocks ;-)

Insert the dolphin catalog so the messages appear translated correctly when eg, embedded into konqueror

BUG: 152752

svn path=/trunk/KDE/kdebase/apps/; revision=740701